# cuda-spmv-benchmark

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  TESTING.md  VASTAI_CG_COMMANDS.md  VASTAI_QUICKSTART.md  benchmark_comparison.sh  benchmark_suite.sh  compare_convergence.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: API.md  PROBLEM_SIZE_SCALING_RESULTS.md  PROFILING_ANALYSIS.md  SHOWCASE_SCALING_RESULTS.md  kokkos_plan.md  scaling_summary.md
docs/figures/: README.md
include/: benchmark_stats.h  benchmark_stats_mgpu.h  io.h  spmv.h  spmv_csr.h  spmv_ellpack.h  spmv_stencil.h  visualization.h
include/solvers/: cg_metrics.h  cg_solver.h  cg_solver_mgpu.h  cg_solver_mgpu_partitioned.h
matrix/: example3x3.mtx  example81x81.mtx
profiling/: README.md
profiling/nsys/: amgx_1ranks_profile_10000.nsys-rep  amgx_2ranks_profile_10000.nsys-rep  amgx_cg_2000_1n_2xa100SXM4.nsys-rep  amgx_cg_2000_2n_2xa100SXM4.nsys-rep  amgx_cg_4000_1n_2xa100SXM4.nsys-rep  amgx_cg_4000_2n_2xa100SXM4.nsys-rep  amgx_cg_7000_1n_2xa100SXM4.nsys-rep  amgx_cg_7000_2n_2xa100SXM4.nsys-rep  custom_cg_full_nvtx_event_2000_1n_2xa100SXM4.nsys-rep  custom_cg_full_nvtx_event_2000_2n_2xa100SXM4.nsys-rep  custom_cg_full_nvtx_event_4000_1n_2xa100SXM4.nsys-rep  custom_cg_full_nvtx_event_4000_2n_2xa100SXM4.nsys-rep  custom_cg_full_nvtx_event_7000_1n_2xa100SXM4.nsys-rep  custom_cg_full_nvtx_event_7000_2n_2xa100SXM4.nsys-rep  mpi_1ranks_profile_10000.nsys-rep  mpi_2ranks_profile_10000.nsys-rep
results/: README.md  h100_nvl_20250902_0932.csv  h100_nvl_20250902_0932_report.txt  h100_nvl_20250902_1114.csv  h100_nvl_20250902_1121.csv  h100_nvl_20250902_1121_report.txt  test_small.csv  test_small_report.txt  vastai_20250901_1316.csv  vastai_20250901_1316_report.txt  vastai_20250901_1814.csv  vastai_20250901_1814_report.txt  vastai_multimode_nvidia_a100_sxm4_80gb_20250913_0947_multimode_report.txt  vastai_multimode_nvidia_a100_sxm4_80gb_20250913_0947_summary.csv  vastai_multimode_nvidia_a100_sxm4_80gb_20250914_1530_multimode_report.txt  vastai_multimode_nvidia_a100_sxm4_80gb_20250914_1530_summary.csv
results/h100_nvl_20250902_0932_json/: csr_results.json  stencil5_results.json
results/h100_nvl_20250902_1121_json/: csr_results.json  stencil5_results.json
results/test_small_json/: csr_results.json  stencil5_results.json
results/vastai_20250901_1316_json/: csr_results.json  stencil5_results.json
results/vastai_20250901_1814_json/: csr_results.json  stencil5_results.json
results/vastai_multimode_nvidia_a100_sxm4_80gb_20250913_0947_json/: csr_results.json  ellpack-naive_results.json  stencil5-opt_results.json  stencil5-shared_results.json  stencil5_results.json
results/vastai_multimode_nvidia_a100_sxm4_80gb_20250914_1530_json/: csr_results.json  ellpack-naive_results.json  stencil5-coarsened_results.json  stencil5-opt_results.json  stencil5_results.json
scripts/: README.md  benchmark_and_visualize.sh  detect_gpu_config.sh  generate_performance_chart.sh  install_amgx.sh  install_amgx_vastai.sh  push_vastai_results.sh  run_all.sh  vastai_cg_setup.sh  vastai_multimode_benchmark.sh  vastai_setup.sh
scripts/analysis/: analyze_spmv_single_gpu.py  generate_detailed_scaling.py  generate_scaling_graphs.py  save_results_to_git.sh
scripts/benchmarking/: README.md  benchmark_all_branches.sh  benchmark_amgx.sh  benchmark_mgpu_spmv_strong.sh  benchmark_mgpu_spmv_weak.sh  benchmark_optimization.sh  benchmark_problem_sizes.sh  benchmark_spmv_comparison.sh  benchmark_suite.sh  benchmark_weak_scaling.sh  multimode_benchmark.sh  quick_bench.sh  quick_verification.sh  remote_benchmark.sh  run_all_benchmarks.sh
scripts/plotting/: plot_results.py  plot_roofline.py  requirements.txt
scripts/profiling/: profile_kernel.sh
scripts/setup/: detect_gpu_config.sh  full_setup.sh  install_amgx.sh
scripts/utils/: test_validation.sh
scripts/visualizations/: plot_custom_vs_amgx.py  (+3 more)
tests/: .gitignore  CMakeLists.txt  test_cg_solver.cpp  test_helpers_demo.cpp  test_main.cpp  test_wrapper_basic.cpp
tests/helpers/: cuda_test_utils.cpp  cuda_test_utils.hpp  matrix_fixtures.cpp  matrix_fixtures.hpp  performance_benchmarks.cpp  performance_benchmarks.hpp
tests/wrappers/: spmv_wrapper.cpp  spmv_wrapper.hpp
(+38 files in other folders)
